--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dylux-bot",
+  "name": "NeKotine-BOT",
   "version": "0.5.0",
   "description": "WhatsApp Bot Baileys",
   "main": "main.js",
