--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FG98F/dylux-bot.git"
+    "url": "git+https://gitHub.com/no-disponible"
   },
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.3",
