--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
   "bugs": {
     "url": "https://gitHub.com/no-disponible"
   },
-  "homepage": "https://github.com/FG98F/dylux-bot/"
+  "homepage": "https://gitHub.com/no-disponible/"
 }
